# simple_site_builder

./: .gitignore  .ignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build-release  netlify.toml  start-watch  start-watcher
content/: about.html  index.html
content/_data/: config.json
content/_includes/: wrapper.html
content/_includes/test-data/: alfa.json
content/_includes/wrappers/: main.html
content/_release-notes/: v0.3.0.md
content/_scripts/: README.md
content/_sections/0010-overview/: index.html
content/data/: test.json
content/examples/data/: sample-2.json
content/examples/markdown/: sample.md
content/modules/: timestamp-demo.js
content/ping/: about.html
data/: config.json5
docs/: bitty-v0.3.0.js  index.html
docs/about/: index.html
docs/examples/data/: sample.json
docs/ping/about/: index.html
docs/styles/: highlight-base16-ocean-dark.css
docs_tmp/: index.html
example/content/: index.html
example/docs/: index.html
example/templates/: wrapper.html
scripts/: README.md  output.txt  test.bash
site/: README.md
site/content/: index.html
site/content/_templates/: wrapper.html
site/content/about/: index.html
site/docs/: index.html
site/docs/about/: index.html
site/templates/: wrapper.html
site_holding/content/: index.html
site_holding/docs/: index.html
site_holding/docs/about/: index.html
src/: helpers.rs  lib.rs  main.rs  renderer.rs  run_builder.rs  run_scripts.rs  run_server.rs  run_watcher.rs  site.rs
src/builder/: builder_struct.rs  mod.rs
src/builder/movers/: copy_file_details.rs  copy_file_list.rs  mod.rs  (+5 more)
src/config/: mod.rs
src/logger/: mod.rs
src/server/: mod.rs  server.rs
src/watcher/: mod.rs  watcher.rs
test-site/content/: index.html
test-site/data/: auto.json  config.json5
test-site/docs/: index.html
test-site/scripts/: 0001-make-misc-data.py
zzz_image-workshop/og-image/: og-image-main.psd
zzz_site_holding/content/: index.html
zzz_src_original/: helpers.rs  renderer.rs  run_scripts.rs  site.rs
(+37 files in other folders)
