[package]
name = "bs_site_builder"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "bs"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "registry", "std"] }


[lib]
doctest = false
