[package]
name = "simple_site_builder"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "ssb"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = "0.4.41"
clearscreen = "4.0.2"
itertools = "0.14.0"
markdown = "1.0.0"
minijinja = { version = "2.12.0", features = ["custom_syntax", "json", "loader"] }
port_check = "0.3.0"
pretty_assertions = "1.4.1"
regex = "1.11.2"
rstest = "0.26.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syntect = "5.2.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "registry", "std"] }
walkdir = "2.5.0"
watchexec = "8.0.1"
watchexec-events = "6.0.0"
watchexec-signals = "5.0.0"


[lib]
doctest = false
